--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<% if(htmlWebpackPlugin.options.config.header) { %>
-		<link rel="stylesheet" type="text/css" href="//common/css/header.css" />
-		<% } %>
-		<title><%= (htmlWebpackPlugin.options.config.title) %></title>
+		<title></title>
 	</head>
 
-	<body></body>
-	<% if(htmlWebpackPlugin.options.config.header) { %>
-	<script src="//common/header.min.js" type="text/javascript"></script>
-	<% } %>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
