--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title></title>
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 
 	<body>
-		<div id="root"></div>
+		<div id="root">111</div>
 	</body>
 </html>
